Fixed layout issue

--- a/app/elements/list-compound/list-compound.scss
+++ b/app/elements/list-compound/list-compound.scss
@@ -59,6 +59,9 @@
 
       .txt > div {
         padding-right: 4px;
+        width:100%;
+        display: table;
+        table-layout: fixed;
       }
 
       .txt > div:last-child {
